# always-decimal

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci-publish.yml  testpypi-prerelease.yml
src/always_decimal/: __init__.py  core.py
tests/: test_core.py
