[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "always-decimal"
version = "1.0.0"
description = "Coerce floats/strings/Decimals to Decimal with predictable scale and rounding."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Utkarsh Singh"}]
keywords = ["decimal", "numeric", "postgres", "precision"]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.4",
  "mypy>=1.10",
  "build>=1.2",     # python -m build (pip-compatible)
  "twine>=5.1",     # for publish (pip-compatible)
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
